[package]
name = "block_ex"
version = "0.1.0"
authors = ["Dev380 <49997896+Dev380@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.9.1"
generic-array = "0.14.4"
bincode = "1.3.1"
serde = {version = "1.0.116", features = ["derive"]}
libp2p = "0.31.2"
